--- a/app/views/notes/edit.html.haml
+++ b/app/views/notes/edit.html.haml
@@ -8,4 +8,4 @@
 
 %article
   %h1= t("notes.edit note")
-  = render partial: 'form', locals: {note: @note}
+  = render partial: 'form', locals: {note: @moment, results: @results}
