--- a/app/assets/stylesheets/mobile/_nav_primary.sass
+++ b/app/assets/stylesheets/mobile/_nav_primary.sass
@@ -121,3 +121,13 @@ article .reader-nav
   background:
     image: image-url("nav-sprite.png")
     position: 12px -666px
+
+#nav_mobile_profile_menu
+
+  #nav_mobile_bookmarks
+
+  #nav_mobile_notes
+
+  #nav_mobile_highlights
+
+  #nav_mobile_friends
