--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,21 +7,6 @@
   container_classes << "no_primary_nav" if @main_nav == false
   container_class_str = container_classes.join(" ")
 
-  # Used for primary / mobile navs
-
-  is_authed         = current_auth ? true : false
-  is_home_url       = current_page?(moments_path)
-  is_bible_url      = controller.controller_name == "references" && controller.action_name == "show"
-  is_videos_url     = controller_name == "videos"
-  is_bookmarks_url  = controller_name == "bookmarks"
-  is_plans_url      = controller_name == "plans" || controller_name == "subscriptions"
-
-  # refactor all of these (pull logic to set nav from controllers, etc)
-  is_notes_url      = @nav == :notes
-
-  # quick method to return a class of "highlighted"/" " depending on whether the passed test evaluates to true/false
-  highlight = Proc.new {|test| test ? "highlighted" : ""}
-
 %html{class: (@html_classes.join(' ') if @html_classes), "data-locale" => I18n.locale, id: @html_id}
 
   %head{lang: 'en-us'}
@@ -33,143 +18,15 @@
   %body
     #wrapper
       = content_for?(:header) ? yield(:header) : render("/shared/header/default")
-      - plan_href = is_authed ? subscriptions_path(user_id: current_auth.username) : plans_path
-      - live_href = "http://#{([:de, :es, :fr, :ko, :nl, :no, :pt, :ru, :zh_CN, :zh_TW].include?(I18n.locale) ? I18n.locale : :www).to_s.downcase.gsub("_", "-")}.a.youversion.com/live"
-
-      - #--------- Begin Mobile Navigation
-      - unless @main_nav == false
-        #nav_mobile.mobile{role:"navigation"}
-          %nav
-            %ul
-              %li#nav_mobile_home{class: highlight.call(is_bible_url)}
-                %a.icon{href: moments_path}
-                  %span= t('home')
-              %li#nav_mobile_bible{class: highlight.call(is_bible_url)}
-                %a.icon{href:'/bible'}
-                  %span= t('bible')
-              %li#nav_mobile_plans{class: highlight.call(is_plans_url)}
-                %a.icon{href: plan_href}
-                  %span=t("plans.title")
-              %li#nav_mobile_videos{class: highlight.call(is_videos_url)}
-                %a.icon{href: '/videos'}
-                  %span=t("videos.title")
-              /
-                %li#nav_mobile_live
-                  %a.icon{href: live_href}
-                    %span=t("live")
-              %li#nav_mobile_mobile
-                %a.icon{href:'/mobile'}
-                  %span=t("mobile apps")
-              - if current_auth
-                %li#nav_mobile_profile
-                  %a.icon{href: user_path(current_auth.username)}
-                    %span=t("Profile")
-                  /
-                    %ul#nav_mobile_profile_menu
-                      %li#nav_primary_bookmarks{class: highlight.call(is_bookmarks_url)}
-                        - bookmark_href = is_authed ? bookmarks_user_path(current_auth.username) : sign_up_path(source: "bookmark")
-                        %a.icon{href: bookmark_href}
-                          %span=t("bookmarks")
-                      %li#nav_primary_notes{class: highlight.call(is_notes_url)}
-                        - notes_href = is_authed ? notes_user_path(current_auth.username) : notes_path
-                        %a.icon{href: notes_href}
-                          %span=t("notes")
-                      %li#nav_primary_highlights{class: highlight.call(is_notes_url)}
-                        - notes_href = is_authed ? notes_user_path(current_auth.username) : notes_path
-                        %a.icon{href: notes_href}
-                          %span=t("highlights")
-                      %li#nav_primary_friends{class: highlight.call(is_notes_url)}
-                        - notes_href = is_authed ? notes_user_path(current_auth.username) : notes_path
-                        %a.icon{href: notes_href}
-                          %span=t("highlights")
-
-              - if is_authed
-                %li#nav_mobile_sign_out
-                  %a{href: sign_out_path}
-                    =t("sign out")
-              - else
-                %li#nav_mobile_sign_in
-                  %a{href: sign_in_path(redirect: params[:redirect])}
-                    =t("sign in")
-                %li#nav_mobile_sign_up
-                  %a{href: sign_up_path(redirect: params[:redirect])}
-                    =t("sign up")
-
-      - #--------- End Mobile Navigation
+      = render(partial: "layouts/mobile_nav") unless @main_nav == false
 
       - flash.each do |key, msg|
         %div{class: container_class_str, id: "flash_#{key}"}= msg
 
       #container{class: container_class_str}
         #main{role: "main", class: @is_reader == true ? 'main_reader' : ''}
-
-          - #--------- Begin Primary Navigation
-          - unless @main_nav == false
-
-            #nav_primary{:role => "navigation"}
-              %nav
-                %ul
-                  %li#nav_primary_home{class: highlight.call(is_home_url) }
-                    %a.icon{href: moments_path}
-                      %span &nbsp;
-                    %a.tooltip{href: moments_path, style:"display: none;"}
-                      %span Home
-
-                  %li#nav_primary_bible{class: highlight.call(is_bible_url) }
-                    %a.icon{href: '/bible'}
-                      %span &nbsp;
-                    %a.tooltip{href: "/bible", style:"display: none;"}
-                      %span= t('bible')
-
-                  %li#nav_primary_plans{class: highlight.call(is_plans_url)}
-                    %a.icon{href: plan_href }
-                      %span &nbsp;
-                    %a.tooltip{href: plan_href, style:"display: none;"}
-                      %span=t("plans.title")
-
-                  - if Video.available_locales.include? I18n.locale
-                    %li#nav_primary_videos{class: highlight.call(is_videos_url)}
-                      %a.icon{href:"/videos"}
-                        %span &nbsp;
-                      %a.tooltip{href:"/videos", style:"display: none;"}
-                        %span=t("videos.title")
-
-                  %li#nav_primary_live
-                    %a.icon{href: live_href}
-                      %span &nbsp;
-                    %a.tooltip{href: live_href, style: "display: none;"}
-                      %span=t("live")
-
-                  %li#nav_primary_mobile
-                    %a.icon{href: '/mobile'}
-                      %span &nbsp;
-                    %a.tooltip{href: '/mobile', style: "display: none;"}
-                      %span=t("mobile")
-
-                  - if current_auth
-                    %li#nav_primary_bookmarks{class: highlight.call(is_bookmarks_url)}
-                      - bookmark_href = is_authed ? bookmarks_user_path(current_auth.username) : sign_up_path(source: "bookmark")
-                      %a.icon{href: bookmark_href}
-                        %span &nbsp;
-                      %a.tooltip{href: bookmark_href, style:"display: none;"}
-                        %span= t('bookmarks.title')
-
-                    %li#nav_primary_notes{class: highlight.call(is_notes_url)}
-                      - notes_href = is_authed ? notes_user_path(current_auth.username) : notes_path
-                      %a.icon{href: notes_href}
-                        %span &nbsp;
-                      %a.tooltip{href: notes_href, style: "display: none;"}
-                        %span=t("notes title")
-
-                    %li#nav_primary_highlights{class: highlight.call(is_notes_url)}
-                      - notes_href = is_authed ? notes_user_path(current_auth.username) : notes_path
-                      %a.icon{href: notes_href}
-                        %span &nbsp;
-                      %a.tooltip{href: notes_href, style: "display: none;"}
-                        %span=t("notes title")
-
-          - #--------- End Primary Navigation
-
+          
+          = render(partial: "layouts/primary_nav") unless @main_nav == false
           = content_for?(:main) ? yield(:main) : yield
 
         #sidebar
