Notification items in list linked to action_url.

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -47,6 +47,10 @@
     line-height: 1.4em
     border-bottom: 1px solid #ddd
 
+    .activity-timestamp
+      display: block
+      font-size: 12px
+
 .notifications-empty
   p
     text-align: center
