Refactor Notes List Cell to Sidebar partial

--- a/app/views/sidebars/notes/_list.html.haml
+++ b/app/views/sidebars/notes/_list.html.haml
@@ -1,3 +1,16 @@
+:ruby
+  # Used in
+  # sidebars/notes/default
+  # references/notes
+
+  # Local variables
+  # notes  (required)
+  # link   (optional)
+  # title  (optional)
+  
+   title = title || "Notes"
+   link = link || notes_path
+
 #widget-notes.widget
   %div.hd
     %span
