--- a/app/views/references/notes.html.haml
+++ b/app/views/references/notes.html.haml
@@ -1,1 +1,1 @@
-= render_cell(:notes_list_widget, :display, {notes: @notes, link: related_notes_url(reference: @ref.to_usfm.downcase), title: t("notes.community notes")})
+= render partial: 'sidebars/notes/list', locals: { notes: @notes, link: related_notes_url(reference: @ref.to_usfm.downcase), title: t("notes.community notes")}
