--- a/app/assets/stylesheets/mobile/_nav_primary.sass
+++ b/app/assets/stylesheets/mobile/_nav_primary.sass
@@ -62,6 +62,24 @@
       line-height: 42px
       font-weight: bold
 
+ul#nav_mobile_profile_menu
+  height: 86px
+  padding: 2px 10px 10px
+  background: #2a2a2a
+
+
+  li
+    float: left
+    height: 43px
+    width: 50%
+    border-top: none  
+
+    a
+      background-color: #393939
+      padding: 0 10px   
+      height: 41px 
+      margin-right: 2px
+
 article .reader-nav
   z-index: 0
 
