--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -114,7 +114,7 @@ div.close_tab
   top: -86px
   left: 0px
   width: 100%
-  background: url("mobile/verse_toolbar_bg.jpg") repeat-x
+  background: url("mobile/verse_toolbar_bg.gif") repeat-x
   z-index: 193
   margin-top: 47px
 
@@ -125,7 +125,7 @@ div.close_tab
   left: 0px
   width: 100%
   display: none
-  background: url("mobile/verse_toolbar_bg.jpg") repeat-x
+  background: url("mobile/verse_toolbar_bg.gif") repeat-x
   z-index: 192
   margin-top: 47px
 
