--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -312,7 +312,7 @@ article.profile
     background: image-url("friend-request-sprite.png") no-repeat center -128px #D30000
 
   .friend-detail-add
-    background: image-url("friend-request-sprite.png") no-repeat center 4px #00B400  
+    background: image-url("friend-request-sprite.png") no-repeat center 4px #00B400
 
   .friends-none
     padding: 110px 0 0
@@ -352,3 +352,23 @@ article.profile
 #main .profile input + label,
 #main .profile select + label
   display: inline-block
+
+// !Settings pages
+
+.settings-header
+  padding: 20px 15px 0
+  text-align: center
+
+  .settings-header-avatar
+    position: relative
+    top: auto
+    right: auto
+    width: 80px
+    height: 80px
+
+  .settings-header-name
+    margin: 10px 0 0
+    font-size: 38px
+
+.mobile + h2
+  display: none
