--- a/app/views/moments/_comments.html.haml
+++ b/app/views/moments/_comments.html.haml
@@ -4,23 +4,27 @@
   # comments_displayed - boolean, true or false (whether or not to display comments when rendering html)
 
 .moment-comments{class: comments_displayed ? "" : "hide"}
-  - if moment.commenting and moment.comments
+  - if moment.commenting
     - if moment.comments_count.to_i > 3
       %span.moment-comments-more
         = link_to("View all comments", "/#{moment.class.name.downcase.pluralize}/#{moment.id}")
     
+    - # We need to render an empty ul if there are no comments so that
+    - # our front end javascript can insert a new comment via ajax as needed
+    - # Don't adjust the conditional to not render a ul if there are no comments
     %ul.moment-comments-list
-      - moment.comments.each do |comment|
-        - user = comment.user
-        - avatar = user.avatars.md_avatar
-        %li.moment-comments-list-comment
-          %span.moment-comments-list-avatar
-            = link_to(user) do
-              = image_tag avatar.url
-          %p.moment-comments-list-text
-            = link_to(user.name, user_path(user.username))
-            = comment.content
-            %span.moment-comment-dt
-              = api_dt_time_ago(comment.updated_dt)
+      - if moment.comments
+        - moment.comments.each do |comment|
+          - user = comment.user
+          - avatar = user.avatars.md_avatar
+          %li.moment-comments-list-comment
+            %span.moment-comments-list-avatar
+              = link_to(user) do
+                = image_tag avatar.url
+            %p.moment-comments-list-text
+              = link_to(user.name, user_path(user.username))
+              = comment.content
+              %span.moment-comment-dt
+                = api_dt_time_ago(comment.updated_dt)
 
-  = render partial: "moments/comments_form", locals: {moment: moment}
+    = render partial: "moments/comments_form", locals: {moment: moment}
