--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -77,3 +77,22 @@
         <span class="text-wide">#{t("friendships.requests no new")}</span>
       {{/if}}
     </div>
+
+%script#comment-list-item-tmpl{type:"text/x-handlebars-template"}
+  :plain
+    <li class="moment-comments-list-comment">
+      <span class="moment-comments-list-avatar">
+        <a href="/users/{{user.username}}">
+          <img class="round-avatar" src="{{user.avatars.collection.1.url}}" height="48" width="48" />
+        </a>
+      </span>
+      <p class="moment-comments-list-text">
+        <a href="/users/{{user.username}}">
+          {{user.name}}
+        </a>
+        {{content}}
+        <span class="moment-comment-dt">
+          #{t("features.datetime.just now")}
+        </span>
+      </p>
+    </li>   
