Select plan privacy upon creation

--- a/app/assets/stylesheets/_pagination.sass
+++ b/app/assets/stylesheets/_pagination.sass
@@ -16,20 +16,9 @@
       padding: 1px
       margin: 0 5px 0 0
 
-    a
-      color: #fff
-      display: block
-      margin: -1px
-      padding: 0 8px
-      text-decoration: none
-      line-height: 24px
-      height: 25px
-      background: #aaa
-      +border-radius(4px)
-      +box-shadow(#777 0 2px 0 0)
+    .action_button
+      font-size: 12px
 
-    a:hover
-      background-color: #888
 
   .pagination.labels
     float: right
