--- a/app/assets/stylesheets/mobile/_form_elements.sass
+++ b/app/assets/stylesheets/mobile/_form_elements.sass
@@ -41,7 +41,7 @@ input[type="submit"].action_button_grey,
 .action_button_green,
 .action_button_red,
 .action_button_grey
-  padding: 10px 0px  !important
+  padding: 10px !important
   border-radius: 4px
   border: none
   width: 100%
