--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -135,9 +135,11 @@ article#plan-index dd.highlighted a,
   font-size: 32px
   margin-top: 20px
 
-.reading_plan_index .action_button_green,
-.reading_plan_index .action_button_blue
-  width: 90%
+.plan-privacy-buttons
+
+  .detail-text
+    font-size: 12px !important
+
 
 #main #subscriptions-index
 
