--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -92,7 +92,7 @@
         </a>
         {{content}}
         <span class="moment-comment-dt">
-          #{t("features.datetime.just now")}
+          #{t("ui.datetime.just now")}
         </span>
       </p>
     </li>   
