--- a/app/views/sidebars/plans/_sample.html.haml
+++ b/app/views/sidebars/plans/_sample.html.haml
@@ -12,7 +12,7 @@
     %nav
       %a.close_btn.subscription_close_btn
 
-= render partial: "/sidebars/plans/button", locals: {plan: plan}
+= render partial: "/plans/button", locals: {plan: plan}
 
 
 #widget-plan-controls.widget
