--- a/app/assets/stylesheets/_sidebar.sass
+++ b/app/assets/stylesheets/_sidebar.sass
@@ -36,6 +36,7 @@
 
 #sidebar a.action_button_blue,
 #sidebar a.action_button_green,
+#sidebar a.action_button_grey,
 #donate_now_wrap a.action_button_green
   display: block
 
@@ -43,3 +44,24 @@
 #sidebar button.action_button_green,
 #donate_now_wrap button.action_button_green
   min-width: 100%
+
+.plan-privacy-buttons
+  display: none
+  background: #FFF
+  overflow: auto
+  padding: 15px
+
+  .detail-text
+    text-align: center
+    margin-bottom: 15px
+    font-weight: bold
+
+  .button-private,
+  .button-public
+    width: 32%
+
+  .button-private
+    float: right
+
+  .button-public
+    float: left
