Primary nav optimizations and redundancy elimination.

--- a/app/assets/stylesheets/_nav_primary.sass
+++ b/app/assets/stylesheets/_nav_primary.sass
@@ -25,7 +25,7 @@
     background-color: #111
     background-repeat: no-repeat
 
-  a.icon span
+  a.icon
     background:
       repeat: no-repeat
     border-top: 1px solid rgba(#fff, 0.15)
@@ -45,53 +45,53 @@
   a.icon:hover
     color: #fff
 
-#nav_primary_home a.icon span
+#nav_primary_home a.icon
   background:
     image: image-url("nav-sprite.png")
     position: center -87px
 
-#nav_primary_bible a.icon span
+#nav_primary_bible a.icon
   background:
     image: image-url("nav-sprite.png")
     position: center -278px
 
-#nav_primary_plans a.icon span
+#nav_primary_plans a.icon
   background:
     image: image-url("nav-sprite.png")
     position: center -470px
 
-#nav_primary_friends a.icon span
+#nav_primary_friends a.icon
   background:
     image: image-url("nav-sprite.png")
     position: center -1819px
 
-#nav_primary_live a.icon span
+#nav_primary_live a.icon
   background:
     image: image-url("nav-sprite.png")
     position: center -1238px
 
-#nav_primary_mobile a.icon span
+#nav_primary_mobile a.icon
   background:
     image: image-url("nav-sprite.png")
     position: center -1622px
 
-#nav_primary_videos a.icon span
+#nav_primary_videos a.icon
   background:
     image: image-url("nav-sprite.png")
     position: center -565px
 
-#nav_primary_bookmarks a.icon span
+#nav_primary_bookmarks a.icon
   border-top: 3px solid #dedddb
   background:
     image: image-url("nav-sprite.png")
     position: center -852px
 
-#nav_primary_notes a.icon span
+#nav_primary_notes a.icon
   background:
     image: image-url("nav-sprite.png")
     position: center -1045px
 
-#nav_primary_highlights a.icon span
+#nav_primary_highlights a.icon
   border-bottom: 1px solid rgba(#fff, 0.15)
   background:
     image: image-url("nav-sprite.png")
@@ -99,86 +99,86 @@
 
 // !Hover
 
-#nav_primary_home a.icon span:hover
+#nav_primary_home a.icon:hover
   background:
     position: center 9px
 
-#nav_primary_bible a.icon span:hover
+#nav_primary_bible a.icon:hover
   background:
     position: center -182px
 
-#nav_primary_plans a.icon span:hover
+#nav_primary_plans a.icon:hover
   background:
     position: center -374px
 
-#nav_primary_friends a.icon span:hover
+#nav_primary_friends a.icon:hover
   background:
     position: center -1723px
 
-#nav_primary_live a.icon span:hover
+#nav_primary_live a.icon:hover
   background:
     position: center -1142px
 
-#nav_primary_mobile a.icon span:hover
+#nav_primary_mobile a.icon:hover
   background:
     position: center -1526px
 
-#nav_primary_videos a.icon span:hover
+#nav_primary_videos a.icon:hover
   background:
     position: center -661px
 
-#nav_primary_bookmarks a.icon span:hover
+#nav_primary_bookmarks a.icon:hover
   background:
     position: center -756px
 
-#nav_primary_notes a.icon span:hover
+#nav_primary_notes a.icon:hover
   background:
     position: center -949px
 
-#nav_primary_highlights a.icon span:hover
+#nav_primary_highlights a.icon:hover
   background:
     position: center -1908px
 
 
 // !Highlighted
 
-.highlighted#nav_primary_home a.icon span
+.highlighted#nav_primary_home a.icon
   background:
     position: center 9px
 
-.highlighted#nav_primary_bible a.icon span
+.highlighted#nav_primary_bible a.icon
   background:
     position: center -182px
 
-.highlighted#nav_primary_plans a.icon span
+.highlighted#nav_primary_plans a.icon
   background:
     position: center -374px
 
-.highlighted#nav_primary_friends a.icon span
+.highlighted#nav_primary_friends a.icon
   background:
     position: center -1723px
 
-.highlighted#nav_primary_live a.icon span
+.highlighted#nav_primary_live a.icon
   background:
     position: center -1142px
 
-.highlighted#nav_primary_mobile a.icon span
+.highlighted#nav_primary_mobile a.icon
   background:
     position: center -1526px
 
-.highlighted#nav_primary_videos a.icon span
+.highlighted#nav_primary_videos a.icon
   background:
     position: center -661px
 
-.highlighted#nav_primary_bookmarks a.icon span
+.highlighted#nav_primary_bookmarks a.icon
   background:
     position: center -757px
 
-.highlighted#nav_primary_notes a.icon span
+.highlighted#nav_primary_notes a.icon
   background:
     position: center -950px
 
-.highlighted#nav_primary_highlights a.icon span
+.highlighted#nav_primary_highlights a.icon
   background:
     position: center -1908px
 
