Add find friends search bar to requests drop menu.

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -63,6 +63,18 @@ article.social-requests ul
 // `Header > Friend Requests & Notifications
 //----------------------------------------------------------------------------------------------------
 
+#requests-menu
+  .requests-user-search
+    margin-bottom: 15px
+
+  .requests-field-query
+    margin-left: 15px
+    width: 235px
+
+  .requests-field-submit
+    margin-left: 10px
+
+
 #header .friend-requests-btn,
 #header .notifications-btn
   background: image-url("header-sprite.png") no-repeat
@@ -147,7 +159,6 @@ article.social-requests ul
     h4
       font-size: 12px
       color: #505050
-      float: left
       padding-left: 10px
       line-height: 12px
       margin-bottom: 5px
